--- a/src/components/WeeklyWeather.css
+++ b/src/components/WeeklyWeather.css
@@ -67,6 +67,16 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   font-family: 'Noto Sans JP', sans-serif;
   margin-bottom: 0.75rem;
+  text-align: center;
+}
+
+.weekly-weather-location {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  font-family: 'Noto Sans JP', sans-serif;
+  margin-top: 0.25rem;
 }
 
 .weekly-weather-icon {
@@ -144,6 +154,9 @@
     font-size: 1.2rem;
   }
 }
+
+
+
 
 
 
