--- a/src/components/WeatherIcon.css
+++ b/src/components/WeatherIcon.css
@@ -3,6 +3,14 @@
   align-items: center;
   justify-content: center;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
+  width: 100%;
+  height: 100%;
+}
+
+.weather-background-icon .weather-icon-container {
+  width: 100%;
+  height: 100%;
+  filter: none;
 }
 
 .weather-icon-svg {
