--- a/src/components/Clock.css
+++ b/src/components/Clock.css
@@ -282,7 +282,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0.5;
+  opacity: 0.8;
   z-index: 0;
   pointer-events: none;
 }
@@ -290,7 +290,8 @@
 .weather-background-icon {
   width: 100%;
   height: 100%;
-  opacity: 0.6;
+  opacity: 0.9;
+  filter: contrast(1.2) brightness(1.1);
 }
 
 .clock-weather-day-icon {
