--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .app-left {
-  width: 35%; /* 左側を少し小さく */
+  width: 50%; /* 時計の割合を増やす */
   display: flex;
   flex-direction: column;
   min-width: 0;
@@ -24,7 +24,7 @@
 }
 
 .app-right {
-  width: 65%; /* 右側を広げる */
+  width: 50%; /* 右側の割合を調整 */
   display: flex;
   flex-direction: column;
   min-width: 0;
